--- a/styles/main.scss
+++ b/styles/main.scss
@@ -951,6 +951,7 @@ header .burger:hover,
 	align-items: end;
 	justify-content: space-between;
 	box-shadow: 0px 0px 10px 0px gray;
+	height: 100vh;
 }
 .menuNav {
 	display: flex;
@@ -1016,8 +1017,8 @@ header .burger:hover,
 	position: absolute;
 	top: 0;
 	left: 0;
-	width: 100%;
-	height: 100%;
+	width: 100vw;
+	height: 100vh;
 	background-color: black;
 	opacity: .5;
 	z-index: 9;
@@ -1262,7 +1263,7 @@ header .burger:hover,
 	}
 
 	.slider__content {
-		height: 151px;
+		height: 181px;
 	}
 
 	.category {
@@ -1292,8 +1293,19 @@ header .burger:hover,
 	}
 
 	.slide-control {
-		height: 100%;
-		width: 20px;
+		
+	}
+
+	.slide-control.prev {
+		grid-column-start: 1;
+		grid-column-end: 7;
+		padding-left: 10px;
+	}
+
+	.slide-control.next {
+		grid-column-start: 7;
+		grid-column-end: 13;
+		padding-right: 10px;
 	}
 
 	.flex {
@@ -1320,6 +1332,11 @@ header .burger:hover,
 	}
 
 	.mob-left,.mob-right {
+		grid-column-start: 1;
+		grid-column-end: 13;
+	}
+
+	.mobile-full {
 		grid-column-start: 1;
 		grid-column-end: 13;
 	}
