Added 3rd slide, hidden one brand, fixed mobile slider and bags, changed some pics, added one page(ff)

--- a/styles/main.module.scss
+++ b/styles/main.module.scss
@@ -1,3 +1,7 @@
+$mainBlue: #3d699e;
+$secondBlue: #8ba5c5;
+$mainRed: #f2515e;
+$secondRed: #f7979e;
 .welcomeText {
     grid-column-start: 1;
     grid-column-end: 6;
