added 2 atlant pages

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1376,9 +1376,9 @@ img.slide,
     .mobileMenuBlock {
         display: flex;
     }
-    main {
-        padding-bottom: 200px;
-    }
+    // main {
+    //     padding-bottom: 200px;
+    // }
     .mob-left {
         grid-column-start: 1;
         grid-column-end: 7;
